temporal-verifier/tests/examples/fail/sorts/sort_checking_two_sorts.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
sort t

assert forall x:s, y:t. x = y
